--- a/src/pages/user.astro
+++ b/src/pages/user.astro
@@ -37,6 +37,13 @@ import '../styles/global.css';
             </a>
             
         </div>
+        <div class="card">
+
+            <a href="/form">
+                <img alt="Acceso Formulario" src={}>
+            </a>
+            
+        </div>
     </div>
     <footer>
         <p style="text-align: center; color: grey; padding: 50px;">&copy; 2026 JKA Systems. All rights reserved.</p>
@@ -129,7 +136,7 @@ import '../styles/global.css';
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         padding: 1rem;
         text-align: center;
         transition: transform .18s ease, box-shadow .18s ease;
