--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,3 +8,24 @@ import '../styles/global.css';
 <Layout>
 	<Welcome />
 </Layout>
+
+<style>
+    /* fade-in al carregar */
+    body {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    }
+
+    body.loaded {
+    opacity: 1;
+    }
+
+</style>
+
+<script>
+    // JS para añadir la clase "loaded" al cargar
+    window.addEventListener('DOMContentLoaded', () => {
+    document.body.classList.add('loaded');
+    });
+
+</script>
